--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,13 +1,16 @@
 ---
-driver_plugin: vagrant
-driver_config:
-  require_chef_omnibus: true
+driver:
+  name: vagrant
+
+provisioner:
+  name: chef_zero
+
+client_rb:
+  treat_deprecation_warnings_as_errors: true
+  resource_cloning: false
 
 platforms:
 - name: ubuntu-15.04
-  driver_config:
-    box: opscode-ubuntu-15.04
-    box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_ubuntu-15.04_provisionerless.box
 
 suites:
 - name: default
