Rspec_unit_tests_to_inspec:  Wrap tests in control blocks
Cookstyle fixes for current version of cookstyle
Add the resource_status handler only in suites where line counts are really tested

--- a/test/integration/replace_or_add/inspec.yml
+++ b/test/integration/replace_or_add/inspec.yml
@@ -10,4 +10,4 @@ supports:
   - os-family: unix
 depends:
   - name: line_resources
-    path: ../line_resources
+    path: test/integration/line_resources
