--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -45,4 +45,11 @@ suites:
     - recipe[test::delete_lines]
 - name: replace_or_add
   run_list:
+    - recipe[test::resource_status]
+    - recipe[test::replace_or_add_add_a_line_matching_pattern]
+    - recipe[test::replace_or_add_change_line_eof]
+    - recipe[test::replace_or_add_duplicate]
+    - recipe[test::replace_or_add_missing_file]
+    - recipe[test::replace_or_add_replace_only]
+    - recipe[test::replace_or_add_unmatched]
     - recipe[test::replace_or_add]
