--- a/test/integration/replace_or_add/inspec.yml
+++ b/test/integration/replace_or_add/inspec.yml
@@ -1,8 +1,8 @@
 name: profile
 title: InSpec 
-maintainer: Chef Software, Inc.
-copyright: Chef Software, Inc.
-copyright_email: support@chef.io
+maintainer: Sous Chefs
+copyright: Sous Chefs
+copyright_email: help@sous-chefs.org
 license: Apache-2.0
 summary: Extends the file matcher
 version: 1.0.0
