--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -18,6 +18,9 @@ suites:
 - name: delete_from_list
   run_list:
     - recipe[test::delete_from_list]
+- name: delete_from_list_ignore_missing_file
+  run_list:
+    - recipe[test::delete_from_list_ignore_missing_file]
 - name: add_to_list
   run_list:
     - recipe[test::add_to_list]
@@ -27,6 +30,9 @@ suites:
 - name: delete_lines
   run_list:
     - recipe[test::delete_lines]
+- name: delete_lines_ignore_missing_file
+  run_list:
+    - recipe[test::delete_lines_ignore_missing_file]
 - name: replace_or_add
   run_list:
     - recipe[test::resource_status]
