--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -13,6 +13,9 @@ verifier: inspec
 
 platforms:
 - name: ubuntu-16.04
+- name: windows-2012r2
+  driver_config:
+    box: mwrock/Windows2012R2
 
 suites:
 - name: delete_from_list
