--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,6 +35,7 @@ test_script:
   - c:\opscode\chefdk\bin\cookstyle --version
   - c:\opscode\chefdk\bin\chef.bat exec foodcritic --version
   - c:\opscode\chefdk\bin\chef.bat exec delivery local all
+  - c:\opscode\chefdk\bin\chef.bat exec kitchen list
   - c:\opscode\chefdk\bin\chef.bat exec kitchen verify
 
 deploy: off
