--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,9 @@ skip_tags: true
 #faster cloning
 clone_depth: 1
 
+init:
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
 # Install the latest nightly of ChefDK
 install:
   - ps: iex (irm https://omnitruck.chef.io/install.ps1); Install-Project -Project chefdk -channel current
