--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,4 +40,7 @@ test_script:
   # - c:\opscode\chefdk\bin\chef.bat exec kitchen list
   # - c:\opscode\chefdk\bin\chef.bat exec kitchen verify
 
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
 deploy: off
