--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,8 +37,8 @@ test_script:
   - c:\opscode\chefdk\bin\cookstyle --version
   - c:\opscode\chefdk\bin\chef.bat exec foodcritic --version
   - c:\opscode\chefdk\bin\chef.bat exec delivery local all
-  # - c:\opscode\chefdk\bin\chef.bat exec kitchen list
-  # - c:\opscode\chefdk\bin\chef.bat exec kitchen verify
+  - c:\opscode\chefdk\bin\chef.bat exec kitchen list
+  - c:\opscode\chefdk\bin\chef.bat exec kitchen verify
 
 on_finish:
   - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
