--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,25 +16,27 @@ clone_depth: 1
 
 # Install the latest nightly of ChefDK
 install:
-  - ps: iex (irm https://omnitruck.chef.io/install.ps1); Install-Project -Project chefdk -channel current
-  - ps: 'Get-CimInstance win32_operatingsystem -Property Caption, OSArchitecture, Version | fl Caption, OSArchitecture, Version'
-  - ps: $PSVersionTable
-  - c:\opscode\chefdk\bin\chef.bat exec ruby --version
-  - ps: secedit /export /cfg $env:temp/export.cfg
-  - ps: ((get-content $env:temp/export.cfg) -replace ('PasswordComplexity = 1', 'PasswordComplexity = 0')) | Out-File $env:temp/export.cfg
-  - ps: ((get-content $env:temp/export.cfg) -replace ('MinimumPasswordLength = 8', 'MinimumPasswordLength = 0')) | Out-File $env:temp/export.cfg
-  - ps: secedit /configure /db $env:windir/security/new.sdb /cfg $env:temp/export.cfg /areas SECURITYPOLICY
-  - ps: net user /add $env:machine_user $env:machine_pass
-  - ps: net localgroup administrators $env:machine_user /add
+  - ps: |
+      iex (irm https://omnitruck.chef.io/install.ps1); Install-Project -Project chefdk -channel current
+      'Get-CimInstance win32_operatingsystem -Property Caption, OSArchitecture, Version | fl Caption, OSArchitecture, Version'
+      $PSVersionTable
+      c:\opscode\chefdk\bin\chef.bat exec ruby --version
+      secedit /export /cfg $env:temp/export.cfg
+      ((get-content $env:temp/export.cfg) -replace ('PasswordComplexity = 1', 'PasswordComplexity = 0')) | Out-File $env:temp/export.cfg
+      ((get-content $env:temp/export.cfg) -replace ('MinimumPasswordLength = 8', 'MinimumPasswordLength = 0')) | Out-File $env:temp/export.cfg
+      secedit /configure /db $env:windir/security/new.sdb /cfg $env:temp/export.cfg /areas SECURITYPOLICY
+      net user /add $env:machine_user $env:machine_pass
+      net localgroup administrators $env:machine_user /add
 
 build_script:
-  - ps: c:\opscode\chefdk\bin\chef.bat shell-init powershell | iex; 
-  - chef --version
+  - ps: |
+      c:\opscode\chefdk\bin\chef.bat shell-init powershell | iex
+      chef --version
 
 test_script:
   - cookstyle --version
   - foodcritic --version
   - delivery local all
-  - kitchen diag
+  - kitchen diagnose all
 
 deploy: off
