--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@
 environment:
   machine_user: vagrant
   machine_pass: vagrant
-  KITCHEN_YAML: .kitchen.appveyor.yml
+  #  KITCHEN_YAML: .kitchen.appveyor.yml
 
 branches:
   only:
