--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -34,6 +34,9 @@ suites:
   run_list:
     - recipe[test::resource_status]
     - recipe[test::delete_lines]
+- name: filter_lines
+  run_list:
+    - recipe[test::filter_lines]
 - name: replace_or_add
   run_list:
     - recipe[test::resource_status]
