--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -36,6 +36,7 @@ suites:
     - recipe[test::delete_lines]
 - name: filter_lines
   run_list:
+    - recipe[test::resource_status]
     - recipe[test::filter_lines]
 - name: replace_or_add
   run_list:
