--- a/.travis.yml
+++ b/.travis.yml
@@ -12,17 +12,18 @@ addons:
 branches:
   only:
     - master
+    - chef-13
+    - chef-12
 
 services: docker
 
 env:
-- INSTANCE=delete-from-list-centos-7
-- INSTANCE=delete-from-list-centos-7
-- INSTANCE=delete-from-list-ubuntu-1604
 - INSTANCE=add-to-list-centos-7
 - INSTANCE=add-to-list-ubuntu-1604
 - INSTANCE=append-if-no-line-centos-7
 - INSTANCE=append-if-no-line-ubuntu-1604
+- INSTANCE=delete-from-list-centos-7
+- INSTANCE=delete-from-list-ubuntu-1604
 - INSTANCE=delete-lines-centos-7
 - INSTANCE=delete-lines-ubuntu-1604
 - INSTANCE=replace-or-add-centos-7
