Add the comment filter

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -38,6 +38,7 @@ suites:
   run_list:
     - recipe[test::resource_status]
     - recipe[test::filter_lines_after]
+    - recipe[test::filter_lines_comment]
     - recipe[test::filter_lines_inline]
 - name: replace_or_add
   run_list:
