Add the delete_between filter

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -38,6 +38,7 @@ suites:
     - recipe[test::filter_lines_after]
     - recipe[test::filter_lines_before]
     - recipe[test::filter_lines_comment]
+    - recipe[test::filter_lines_delete_between]
     - recipe[test::filter_lines_inline]
     - recipe[test::filter_lines_multi]
 - name: replace_or_add
