--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -41,6 +41,7 @@ suites:
     - recipe[test::filter_lines_delete_between]
     - recipe[test::filter_lines_inline]
     - recipe[test::filter_lines_multi]
+    - recipe[test::filter_lines_replace]
 - name: replace_or_add
   run_list:
     - recipe[test::resource_status]
