--- a/kitchen.yml
+++ b/kitchen.yml
@@ -56,6 +56,7 @@ suites:
       - recipe[test::replace_or_add_add_a_line_matching_pattern]
       - recipe[test::replace_or_add_change_line_eof]
       - recipe[test::replace_or_add_duplicate]
+      - recipe[test::replace_or_add_no_duplicate]
       - recipe[test::replace_or_add_missing_file]
       - recipe[test::replace_or_add_replace_only]
       - recipe[test::replace_or_add_unmatched]
