--- a/kitchen.yml
+++ b/kitchen.yml
@@ -15,8 +15,15 @@ client_rb:
 verifier: inspec
 
 platforms:
-  - name: ubuntu-18.04
+  - name: debian-9
+  - name: debian-10
   - name: centos-7
+  - name: centos-8
+  - name: centos-stream-8
+  - name: fedora-latest
+  - name: ubuntu-20.04
+  - name: ubuntu-21.04
+  - name: amazonlinux-2
 
 suites:
   - name: add_to_list
