Increase platform testing and add unified_mode (#219)
* Increase platform testing and add unified_mode

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@master
+        uses: actions/checkout@main
       - name: Run Chef Delivery
-        uses: actionshub/chef-delivery@master
+        uses: actionshub/chef-delivery@main
         env:
           CHEF_LICENSE: accept-no-persist
 
@@ -22,17 +22,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@master
+        uses: actions/checkout@main
       - name: Run yaml Lint
-        uses: actionshub/yamllint@master
+        uses: actionshub/yamllint@main
 
   mdl:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@master
+        uses: actions/checkout@main
       - name: Run Markdown Lint
-        uses: actionshub/markdownlint@master
+        uses: actionshub/markdownlint@main
 
   dokken:
     needs: [mdl, yamllint, delivery]
@@ -40,24 +40,31 @@ jobs:
     strategy:
       matrix:
         os:
-          - 'centos-7'
-          - 'ubuntu-1804'
+          - debian-9
+          - debian-10
+          - centos-7
+          - centos-8
+          - centos-stream-8
+          - fedora-latest
+          - ubuntu-2004
+          - ubuntu-2104
+          - amazonlinux-2
         suite:
-          - 'add-to-list'
-          - 'append-if-no-line'
-          - 'delete-from-list'
-          - 'delete-lines'
-          - 'filter-lines'
-          - 'replace-or-add'
+          - add-to-list
+          - append-if-no-line
+          - delete-from-list
+          - delete-lines
+          - filter-lines
+          - replace-or-add
       fail-fast: false
 
     steps:
       - name: Check out code
-        uses: actions/checkout@master
+        uses: actions/checkout@main
       - name: Install Chef
-        uses: actionshub/chef-install@master
+        uses: actionshub/chef-install@main
       - name: Dokken
-        uses: actionshub/kitchen-dokken@master
+        uses: actionshub/kitchen-dokken@main
         env:
           CHEF_LICENSE: accept-no-persist
           KITCHEN_LOCAL_YAML: kitchen.dokken.yml
@@ -70,4 +77,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@master
+        uses: actions/checkout@main
