containerEtcHosts: Investigate a reported problem with updating /etc/hosts
When /etc/hosts is in a container the file replace option is supposed to turn off the atomic update
feature.  It has been reported the the atomic update feature may be being left on causing
replace_or_add to fail.

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -65,6 +65,7 @@ suites:
   - name: replace_or_add
     run_list:
       - recipe[test::replace_or_add_add_a_line_matching_pattern]
+      - recipe[test::replace_or_add_add_a_line_etchosts]
       - recipe[test::replace_or_add_change_line_eof]
       - recipe[test::replace_or_add_duplicate]
       - recipe[test::replace_or_add_missing_file]
